Upgrading to Lucene 10.2 (Snapshot), adding cuvs-java as a dependency, upgrading to JDK22 as minimum